240125 join. login 부분

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -32,7 +32,8 @@
                             <i class="bi bi-person-circle text-dark"></i>
                         </a>
                         <ul class="dropdown-menu text-small" style="">
-                            <li><a class="dropdown-item" href="/login">로그인</a></li>
+                            <li><a class="dropdown-item" sec:authorize="isAnonymous()"  href="/login">로그인</a>
+                                <a class="dropdown-item" sec:authorize="isAuthenticated()"  href="/login">로그아웃</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="/join">회원가입</a></li>
                         </ul>
