--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -31,7 +31,7 @@
 
   // function clickReply(){
   //   $('.btn-reply').click(function (e) {
-  //     if(${sessionScope.u_id == null}){
+  //     if(${sessionScope.id == null}){
   //       alert("댓글은 로그인 후 작성할 수 있습니다.")
   //       location.href = "/login.do"
   //     }else{
